# WarpDrive

./: .gitignore  Billboard.h  BoundingBox.cpp  BoundingBox.h  Brick.cpp  Brick.h  CMakeLists.txt  Camera.cpp  Camera.h  Capsule.h  ClipLineSegBox.cpp  ClipLineSegBox.h  CollisionSystem.h  Colour.h  DemoState.cpp  DemoState.h  DisplayManager.cpp  DisplayManager.h  Err.cpp  EventHandler.cpp  EventHandler.h  FileManager.cpp  FileManager.h  Frustrum.cpp  Frustrum.h  GLMesh.h  GOScreen.cpp  GOScreen.h  Game.h  GameObject.cpp  GameObject.h  GameState.h  Grid.cpp  Grid.h  LineSeg.h  MainGS.cpp  MainGS.h  Material.h  Matrix44.h  Memory.cpp  (+66 more)
ModernOpenGLStudy/: CMakeLists.txt  fragtest1.frag  gldemostate.cpp  gldemostate.hpp  main.cpp  moderngl.pri  verttest1.vert
RigidCollisionDemo/: CMakeLists.txt  RigidCollision.pri  ball.cpp  ball.hpp  launcherstate.cpp  launcherstate.hpp  main.cpp
WarpDrive/: CMakeLists.txt  WarpDrive.pri  WarpDriveSources.cmake
WarpDrive/3DMaths/: Billboard.cpp  Billboard.h  Billboard.hpp  GLMesh.cpp  GLMesh.hpp  Material.cpp  Material.h  Material.hpp  Model.cpp  Model.h  Model.hpp  Teapot.h  Teapot.hpp  Vertex.cpp  Vertex.h  Vertex.hpp  Viewport.h  Viewport.hpp  glm.c  glm.h  glmimg_sdl.c
WarpDrive/3dmaths/: billboard.cpp  billboard.hpp  frustum.cpp  frustum.hpp  glm.h  glm_util.c  glmesh.cpp  glmesh.hpp  glmimg.c  glmimg_sdl.c  material.cpp  material.hpp  model.cpp  model.hpp  modelloader.hpp  teapot.hpp  vertex.cpp  vertex.hpp  vertexbuffer.cpp  vertexbuffer.hpp  viewport.hpp
WarpDrive/BaseMaths/: Capsule.cpp  Capsule.h  Capsule.hpp  ClipLineSegBox.cpp  ClipLineSegBox.h  ClipLineSegBox.hpp  Frustrum.cpp  Frustrum.h  Frustrum.hpp  LineSeg.cpp  LineSeg.h  LineSeg.hpp  Matrix44.cpp  Matrix44.h  Matrix44.hpp  Plane.cpp  Plane.h  Plane.hpp  Quaternion.cpp  Quaternion.h  Quaternion.hpp  Rect.h  Rect.hpp  Sphere.cpp  Sphere.h  Sphere.hpp  Tri.h  Tri.hpp  Vec2.h  Vec3.h  Vec3.hpp  Vec4.h  Vec4.hpp  ray.cpp  ray.hpp
WarpDrive/BaseSystem/: ConfigLoader.cpp  ConfigLoader.h  ConfigLoader.hpp  DisplayManager.cpp  DisplayManager.h  DisplayManager.hpp  Err.cpp  Err.hpp  Factory.h  Factory.hpp  FileManager.cpp  FileManager.h  FileManager.hpp  Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  GameState.h  GameState.hpp  ManagedFile.cpp  ManagedFile.h  ManagedFile.hpp  Memory.cpp  Memory.h  OBJLoader.h  OBJLoader.hpp  SDLEventHandler.cpp  SDLEventHandler.h  SDLFontManager.cpp  SDLFontManager.h  SDLFontManager.hpp  Score.cpp  Score.h  Score.hpp  StringProc.cpp  StringProc.h  StringProc.hpp  TTFManager.cpp  (+5 more)
WarpDrive/Display/: AnimSheet.cpp  AnimSheet.h  AnimSheet.hpp  Camera.cpp  Camera.h  Camera.hpp  Colour.h  Colour.hpp  RGBAColour.h  RGBAColour.hpp  SDLImage.cpp  SDLImage.h  SDLImage.hpp  SDLRGBAColour.h  SDLRGBColour.cpp  SDLRGBColour.h  SDLTTF.cpp  SDLTTF.h  SDLTTF.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  Texture.cpp  Texture.h  TextureSheet.cpp  TextureSheet.h  TextureSheet.hpp
WarpDrive/Events/: PanAndTiltEvent.cpp  PanAndTiltEvent.h  PanAndTiltEvent.hpp  TKAddEvent.h  TKAddEvent.hpp  TKDrawTeapot.h  TKDrawTeapot.hpp  TKMoveObject.cpp  TKMoveObject.h  TKMoveObject.hpp  TKPlayMusic.h  TKPlayMusic.hpp  TKUseObject.cpp  TKUseObject.h  TKUseObject.hpp  TimedMoveEvent.cpp  TimedMoveEvent.h  TimedMoveEvent.hpp  TimedRemoveEvent.cpp  TimedRemoveEvent.h  TimedRemoveEvent.hpp  Timeline.cpp  Timeline.h  Timeline.hpp  TimelineKey.h  glColorEvent.cpp  glColorEvent.h  glColorEvent.hpp
WarpDrive/Physics/: AlignedBoundingBox.cpp  AlignedBoundingBox.hpp  BoundingBox.cpp  BoundingBox.h  CollisionSystem.h  CollisionSystem.hpp  Octree.h  Octree.hpp  VoxelGrid.h  VoxelGrid.hpp
WarpDrive/Sound/: SoundFX.cpp  SoundFX.h  SoundFX.hpp  SoundManager.cpp  SoundManager.h
WarpDrive/basemaths/: capsule.cpp  capsule.hpp  cliplinesegbox.cpp  cliplinesegbox.hpp  frustrum.cpp  frustrum.hpp  lineseg.cpp  lineseg.hpp  matrix44.cpp  matrix44.hpp  plane.cpp  plane.hpp  quaternion.cpp  quaternion.hpp  ray.cpp  ray.hpp  rect.hpp  sphere.cpp  sphere.hpp  tri.hpp  vec2.hpp  vec3.hpp  vec4.hpp
WarpDrive/basesystem/: configloader.cpp  configloader.hpp  displaymanager.cpp  displaymanager.hpp  err.cpp  err.hpp  factory.hpp  filemanager.cpp  filemanager.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  gamestate.cpp  gamestate.hpp  managedfile.cpp  managedfile.hpp  memory.cpp  memory.hpp  objloader.hpp  score.cpp  score.hpp  sdleventhandler.cpp  sdleventhandler.hpp  sdlfontmanager.cpp  sdlfontmanager.hpp  stringproc.cpp  stringproc.hpp  teapotloaderstate.cpp  teapotloaderstate.hpp  ttfmanager.cpp  ttfmanager.hpp  util.cpp  util.hpp
WarpDrive/cmake-modules/: WarningPolicy.cmake
WarpDrive/cmake-src/: WarpDrive-config.cmake.in
WarpDrive/display/: animsheet.cpp  animsheet.hpp  camera.cpp  camera.hpp  colour.hpp  elementbuffer.cpp  elementbuffer.hpp  glshader.cpp  glshader.hpp  rgbacolour.hpp  rgbcolour.hpp  sdlimage.cpp  sdlimage.hpp  sdlttf.cpp  sdlttf.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  texturesheet.cpp  texturesheet.hpp  vertex.cpp  vertex.hpp  vertexarray.cpp  vertexarray.hpp  vertexbuffer.cpp  vertexbuffer.hpp
WarpDrive/events/: glcolorevent.cpp  glcolorevent.hpp  objectevent.cpp  objectevent.hpp  panandtiltevent.cpp  panandtiltevent.hpp  timedmoveevent.cpp  timedmoveevent.hpp  timedremoveevent.cpp  timedremoveevent.hpp  timeline.cpp  timeline.hpp  timelinekey.cpp  timelinekey.hpp  tkaddevent.hpp  tkdrawteapot.hpp  tkmoveobject.cpp  tkmoveobject.hpp  tkplaymusic.hpp  tkuseobject.cpp  tkuseobject.hpp
WarpDrive/include/: external.pri
WarpDrive/lib/: SDL2main.lib  SDL2test.lib
WarpDrive/physics/: alignedboundingbox.cpp  alignedboundingbox.hpp  bruteforcecollision.cpp  bruteforcecollision.hpp  bruteforcecollisioncheck.cpp  bruteforcecollisioncheck.hpp  collisionsystem.cpp  collisionsystem.hpp  octree.hpp  rbpcollision.cpp  rbpcollision.hpp  rdccollision.cpp  rdccollision.hpp  rdccollisioncheck.cpp  rdccollisioncheck.hpp  voxelgrid.hpp
WarpDrive/shaders/: basic.frag  basic.vert
WarpDrive/sound/: soundfx.cpp  soundfx.hpp  soundmanager.cpp  (+1 more)
(+24 files in other folders)
